--- a/pages/bePutInStorage/bePutInStorage.wxml
+++ b/pages/bePutInStorage/bePutInStorage.wxml
@@ -23,7 +23,7 @@
 			<view class="{{ currtabMine==index ? 'mine_active':'' }} " bindtap="mineTab" data-index="{{ index }}" wx:for="{{ mineTabList }}" wx:key="index">{{ item }}</view>
 		</view>
 		<!-- 订单列表 -->
-		<view class="item_list">
+		<view class="item_list" wx:if="{{dataList.length>0}}">
 			<!-- 未处理 -->
 			<view class="items" wx:for="{{ dataList }}" wx:key="index" wx:if="{{ currtabMine == 0 }}">
 				<view class="items_top">
@@ -35,8 +35,8 @@
 				</view>
 				<view class="items_mine">
 					<view class="items_mine_left">
-            <view class="items_mine_name">用户姓名：{{item.client.truename}}</view>
-            <view class="items_mine_name">车牌号：{{item.car_num}}</view>
+						<view class="items_mine_name">用户姓名：{{item.client.truename}}</view>
+						<view class="items_mine_name">车牌号：{{item.car_num}}</view>
 						<view class="items_mine_name">货物名称：{{item.goods[0].pick_status == 0 ?  item.goods[0].goods.goods_name : item.goods[0].goods.pack_name}}</view>
 						<view class="items_mine_num">货物总数量：
 							<block wx:if="{{item.goods[0].pick_status == 1}}">
@@ -73,22 +73,22 @@
 				</view>
 				<view class="items_mine">
 					<view class="items_mine_left">
-            <view class="items_mine_name">用户姓名：{{item.client.truename}}</view>
-            <view class="items_mine_name">车牌号：{{item.car_num}}</view>
+						<view class="items_mine_name">用户姓名：{{item.client.truename}}</view>
+						<view class="items_mine_name">车牌号：{{item.car_num}}</view>
 						<view class="items_mine_name">货物名称：{{item.goods[0].pick_status == 0 ?  item.goods[0].goods.goods_name : item.goods[0].goods.pack_name}}</view>
 						<view class="items_mine_num">货物总数量：
 							<block wx:if="{{item.goods[0].pick_status == 0}}">
 								<!-- {{item.goods[0].weight}} 吨 -->
 								<block wx:if="{{item.goods[0].goods.pack_unit == 0}}">
-									{{item.all_weight/1000}} 吨
+									{{item.pickgoods[0].weight/1000 + item.pickgoods[0].room_weight/1000}} 吨
 								</block>
 								<block wx:else>
-									{{item.all_weight/1000}} 吨
+									{{item.pickgoods[0].weight/1000 + item.pickgoods[0].room_weight/1000}} 吨
 								</block>
 							</block>
 						</view>
 						<view class="items_mine_num">出库人：{{ item.wuser.truename }}</view>
-            <view class="items_mine_num">提交时间：{{ item.create_time }}</view>
+						<view class="items_mine_num">提交时间：{{ item.create_time }}</view>
 					</view>
 					<view class="items_mine_right">
 						<view class="btn details" bindtap="itemsClick" data-id="{{ item.id }}" data-pick="1">查看详情</view>
@@ -106,13 +106,13 @@
 				</view>
 				<view class="items_mine">
 					<view class="items_mine_left">
-          <view class="items_mine_name">用户姓名:：{{item.client.truename}}</view>
-            <view class="items_mine_name">车牌号：{{item.car_num}}</view>
+						<view class="items_mine_name">用户姓名:：{{item.client.truename}}</view>
+						<view class="items_mine_name">车牌号：{{item.car_num}}</view>
 						<view class="items_mine_name">货物名称：{{item.goods[0].pick_status == 0 ?  item.goods[0].goods.goods_name : item.goods[0].goods.pack_name}}</view>
 						<view class="items_mine_num">货物总数量：{{ item.num/1000 }}吨</view>
 						<view class="items_mine_num">出库人：{{ username }}</view>
 						<view class="items_mine_num">提交时间：{{ item.create_time }}</view>
-            <view class="items_mine_num">出库时间：{{ item.update_time }}</view>
+						<view class="items_mine_num">出库时间：{{ item.update_time }}</view>
 						<view class="title_beizhu t_block" wx:if="{{item.goods[0].is_all_status==1 &&item.is_pay==0}}">
 							<image src="/images/block_t.png"></image>
 							<view>用户已提取全部货品，需要支付账单</view>
@@ -123,6 +123,9 @@
 					</view>
 				</view>
 			</view>
+		</view>
+		<view wx:else class="item_list2">
+			暂无订单！
 		</view>
 	</view>
 </view>
