--- a/pages/deliveryOfCargoFromStorage/deliveryOfCargoFromStorage.wxml
+++ b/pages/deliveryOfCargoFromStorage/deliveryOfCargoFromStorage.wxml
@@ -1,99 +1,102 @@
 <!-- 仓管端存货页面 -->
 <!-- <wxs module="dateUtil" src="../../utils/time.wxs"></wxs> -->
 <view class="list_wp">
-  <!-- 搜索 -->
-  <view class="seach_wp">
-    <view class="youx">
-      <!-- input框 -->
-      <view class="input_wp">
-        <image src="/images/fdjing.png" mode='widthFix'></image>
-        <input placeholder="可搜索姓名或车牌号" placeholder-style="color:#fff;" bindinput="inputClick" bindconfirm="searchOrders" bindconfirm="searchOrders" value="{{ inputValue }}"></input>
-      </view>
-      <!-- 时间筛选 -->
-      <view class="time_screen" bindtap="timeToScreen">
-        <view>时间筛选</view>
-        <image src="/images/sanjiao.png" mode='widthFix'></image>
-      </view>
-    </view>
-  </view>
-  <!-- 内容 -->
-  <view class="mine_wp">
-    <!-- 内容tab切换 -->
-    <view class="mineTab">
-      <view class="{{ currtabMine==index ? 'mine_active':'' }} " bindtap="mineTab" data-index="{{ index }}" wx:for="{{ mineTabList }}" wx:for-item="mineitem" wx:key="index">{{ mineitem }}</view>
-    </view>
-    <!-- 订单列表 -->
-    <view class="item_list">
-      <!-- 未处理 -->
-      <view class="items" wx:for="{{ dataList }}" wx:for-item="item" wx:key="index" wx:if="{{ currtabMine == 0 }}">
-        <view class="items_top">
-          <view class="top_left">
-            <image src="/images/time.png"></image>
-            <view>预计到达时间</view>
-          </view>
-          <view class="top_right">{{ item.put_goods_time }}</view>
-        </view>
-        <view class="items_mine">
-          <view class="items_mine_left">
-            <view class="items_mine_name">用户姓名：{{ item.client.truename }}</view>
-            <view class="items_mine_num">车牌号：{{ item.car_num }}</view>
-            <view class="items_mine_name">货物名称：{{ item.str_goods }}</view>
-            <view class="items_mine_num">货物总数量：{{ item.all_weight/1000 }}吨</view>
-          </view>
-          <view class="items_mine_right">
-            <view class="btn details" bindtap="itemsClick" data-id="{{ item.id }}" data-pick="0">查看详情</view>
-            <view class="btn copy" bindtap="confirmClick" data-id="{{ item.id }}">去处理</view>
-          </view>
-        </view>
-      </view>
-      <!-- 处理中 -->
-      <view class="items" wx:for="{{dataList}}" wx:key="index" wx:if="{{ currtabMine == 1 }}" data-id="{{ item.id }}">
-        <view class="items_top">
-          <view class="top_left">
-            <image src="/images/time.png"></image>
-            <view>预计到达时间</view>
-          </view>
-          <view class="top_right">{{ item.put_goods_time }}</view>
-        </view>
-        <view class="items_mine">
-          <view class="items_mine_left">
-            <view class="items_mine_name">用户姓名：{{ item.client.truename }}</view>
-            <view class="items_mine_num">车牌号：{{ item.car_num }}</view>
-            <view class="items_mine_name">货物名称：{{ item.str_goods }}</view>
-            <view class="items_mine_num">货物总数量：{{ item.all_weight/1000 }}吨</view>
-            <view class="items_mine_num">入库人：{{ item.wuser.truename }}</view>
-            <view class="items_mine_num">提交时间：{{item.create_time}}</view>
-          </view>
-          <view class="items_mine_right">
-            <!-- <view class="btn copy" bindtap="confirmClick" data-id="{{ item.id }}">去处理</view> -->
-            <view class="btn details" bindtap="itemsClick" data-id="{{ item.id }}" data-pick="0">查看详情</view>
-          </view>
-        </view>
-      </view>
-      <!-- 已处理 -->
-      <view class="items" wx:for="{{ dataList}}" wx:key="index" wx:if="{{ currtabMine == 2 }}" data-id="{{ item.id }}">
-        <view class="items_top">
-          <view class="top_left">
-            <image src="/images/time.png"></image>
-            <view>预计到达时间</view>
-          </view>
-          <view class="top_right">{{ item.put_goods_time }}</view>
-        </view>
-        <view class="items_mine">
-          <view class="items_mine_left">
-            <view class="items_mine_name">用户姓名：{{ item.client.truename }}</view>
-            <view class="items_mine_num">车牌号：{{ item.car_num }}</view>
-            <view class="items_mine_name">货物名称：{{ item.str_goods }}</view>
-            <view class="items_mine_num">货物总数量：{{ item.all_weight/1000 }}吨</view>
-            <view class="items_mine_num">入库人：{{ item.wuser.truename }}</view>
-            <view class="items_mine_num">提交时间：{{ item.create_time }}</view>
-            <view class="items_mine_num">入库时间：{{ item.update_time }}</view>
-          </view>
-          <view class="items_mine_right">
-            <view class="btn details" bindtap="itemsClick" data-id="{{ item.id }}" data-pick="0">查看详情</view>
-          </view>
-        </view>
-      </view>
-    </view>
-  </view>
+	<!-- 搜索 -->
+	<view class="seach_wp">
+		<view class="youx">
+			<!-- input框 -->
+			<view class="input_wp">
+				<image src="/images/fdjing.png" mode='widthFix'></image>
+				<input placeholder="可搜索姓名或车牌号" placeholder-style="color:#fff;" bindinput="inputClick" bindconfirm="searchOrders" bindconfirm="searchOrders" value="{{ inputValue }}"></input>
+			</view>
+			<!-- 时间筛选 -->
+			<view class="time_screen" bindtap="timeToScreen">
+				<view>时间筛选</view>
+				<image src="/images/sanjiao.png" mode='widthFix'></image>
+			</view>
+		</view>
+	</view>
+	<!-- 内容 -->
+	<view class="mine_wp">
+		<!-- 内容tab切换 -->
+		<view class="mineTab">
+			<view class="{{ currtabMine==index ? 'mine_active':'' }} " bindtap="mineTab" data-index="{{ index }}" wx:for="{{ mineTabList }}" wx:for-item="mineitem" wx:key="index">{{ mineitem }}</view>
+		</view>
+		<!-- 订单列表 -->
+		<view class="item_list" wx:if="{{ dataList.length>0}}">
+			<!-- 未处理 -->
+			<view class="items" wx:for="{{ dataList }}" wx:for-item="item" wx:key="index" wx:if="{{ currtabMine == 0 }}">
+				<view class="items_top">
+					<view class="top_left">
+						<image src="/images/time.png"></image>
+						<view>预计到达时间</view>
+					</view>
+					<view class="top_right">{{ item.put_goods_time }}</view>
+				</view>
+				<view class="items_mine">
+					<view class="items_mine_left">
+						<view class="items_mine_name">用户姓名：{{ item.client.truename }}</view>
+						<view class="items_mine_num">车牌号：{{ item.car_num }}</view>
+						<view class="items_mine_name">货物名称：{{ item.str_goods }}</view>
+						<view class="items_mine_num">货物总数量：{{ item.all_weight/1000 }}吨</view>
+					</view>
+					<view class="items_mine_right">
+						<view class="btn details" bindtap="itemsClick" data-id="{{ item.id }}" data-pick="0">查看详情</view>
+						<view class="btn copy" bindtap="confirmClick" data-id="{{ item.id }}">去处理</view>
+					</view>
+				</view>
+			</view>
+			<!-- 处理中 -->
+			<view class="items" wx:for="{{dataList}}" wx:key="index" wx:if="{{ currtabMine == 1 }}" data-id="{{ item.id }}">
+				<view class="items_top">
+					<view class="top_left">
+						<image src="/images/time.png"></image>
+						<view>预计到达时间</view>
+					</view>
+					<view class="top_right">{{ item.put_goods_time }}</view>
+				</view>
+				<view class="items_mine">
+					<view class="items_mine_left">
+						<view class="items_mine_name">用户姓名：{{ item.client.truename }}</view>
+						<view class="items_mine_num">车牌号：{{ item.car_num }}</view>
+						<view class="items_mine_name">货物名称：{{ item.str_goods }}</view>
+						<view class="items_mine_num">货物总数量：{{ item.putgoods[0].weight/1000 + item.putgoods[0].room_weight/1000}}吨</view>
+						<view class="items_mine_num">入库人：{{ item.wuser.truename }}</view>
+						<view class="items_mine_num">提交时间：{{item.create_time}}</view>
+					</view>
+					<view class="items_mine_right">
+						<!-- <view class="btn copy" bindtap="confirmClick" data-id="{{ item.id }}">去处理</view> -->
+						<view class="btn details" bindtap="itemsClick" data-id="{{ item.id }}" data-pick="0">查看详情</view>
+					</view>
+				</view>
+			</view>
+			<!-- 已处理 -->
+			<view class="items" wx:for="{{ dataList}}" wx:key="index" wx:if="{{ currtabMine == 2 }}" data-id="{{ item.id }}">
+				<view class="items_top">
+					<view class="top_left">
+						<image src="/images/time.png"></image>
+						<view>预计到达时间</view>
+					</view>
+					<view class="top_right">{{ item.put_goods_time }}</view>
+				</view>
+				<view class="items_mine">
+					<view class="items_mine_left">
+						<view class="items_mine_name">用户姓名：{{ item.client.truename }}</view>
+						<view class="items_mine_num">车牌号：{{ item.car_num }}</view>
+						<view class="items_mine_name">货物名称：{{ item.str_goods }}</view>
+						<view class="items_mine_num">货物总数量：{{ item.putgoods[0].weight/1000 + item.putgoods[0].room_weight/1000}}吨</view>
+						<view class="items_mine_num">入库人：{{ item.wuser.truename }}</view>
+						<view class="items_mine_num">提交时间：{{ item.create_time }}</view>
+						<view class="items_mine_num">入库时间：{{ item.update_time }}</view>
+					</view>
+					<view class="items_mine_right">
+						<view class="btn details" bindtap="itemsClick" data-id="{{ item.id }}" data-pick="0">查看详情</view>
+					</view>
+				</view>
+			</view>
+		</view>
+		<view wx:else class="item_list2">
+			暂无订单！
+		</view>
+	</view>
 </view>
